force-app/main/default/objects/Global_Fitness_Metric__dlm/Global_Fitness_Metric__dlm.object-meta.xml
<CustomObject>
    <label>Global Fitness Metric</label>
    <mktDataModelAttributes>
        <creationType>Custom</creationType>
        <dataModelTaxonomy>Salesforce_SFDCReferenceModel_0_93</dataModelTaxonomy>
        <dataSpaceName>default</dataSpaceName>
        <isEnabled>true</isEnabled>
        <isSegmentable>false</isSegmentable>
        <isSqlDmo>false</isSqlDmo>
        <isUsedForMetrics>false</isUsedForMetrics>
        <labelOverride>Global Fitness Metric</labelOverride>
        <masterLabel>Global Fitness Metric</masterLabel>
        <objectCategory>Salesforce_SFDCReferenceModel_0_93.Engagement</objectCategory>
    </mktDataModelAttributes>
</CustomObject>