force-app/main/default/objects/Global_Fitness_Metric__dlm/fields/Workout_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Workout_DateTime__c</fullName>
    <label>Workout Date/Time</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Workout Date/Time</labelOverride>
        <masterLabel>Workout Date/Time</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>DateTime</type>
</CustomField>