force-app/main/default/objects/Global_Fitness_Metric__dlm/fields/Workout_ID__c.field-meta.xml
<CustomField>
    <fullName>Workout_ID__c</fullName>
    <label>Workout ID</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Workout ID</labelOverride>
        <masterLabel>Workout ID</masterLabel>
        <primaryIndexOrder>1</primaryIndexOrder>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>