force-app/main/default/objects/Global_Fitness_Metric__dlm/fields/Workout_Type__c.field-meta.xml
<CustomField>
    <fullName>Workout_Type__c</fullName>
    <label>Workout Type</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Workout Type</labelOverride>
        <masterLabel>Workout Type</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>